# Glide3D

./: .gitignore  CMakeLists.txt  Credits.txt  README.md
Source/: Glide3D.sln  Glide3D.vcxproj  Glide3D.vcxproj.filters  imgui.ini  main.cpp
Source/Core/: Camera.cpp  Camera.h  FpsCamera.cpp  FpsCamera.h  GeometryRenderBuffer.cpp  GeometryRenderBuffer.h  GlideEngine.h  Macros.h  OrthographicCamera.cpp  OrthographicCamera.h  SSAO.cpp  SSAO.h  Skybox.cpp  Skybox.h  TextureAtlas.h
Source/Core/Application/: Application.cpp  Application.h  Logger.cpp  Logger.h
Source/Core/Editor/: Editor.cpp  Editor.h
Source/Core/Entity/: Entity.h
Source/Core/GL_Classes/: CubeDepthMap.cpp  CubeDepthMap.h  CubeReflectionMap.cpp  CubeReflectionMap.h  CubeTextureMap.cpp  CubeTextureMap.h  CubemapArrayTexture.h  DepthBuffer.cpp  DepthBuffer.h  Framebuffer.cpp  Framebuffer.h  GLDebug.h  IndexBuffer.h  SSBO.cpp  SSBO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UBO.cpp  UBO.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Source/Core/Instance/: Entity.h
Source/Core/Lighting/: Light.h
Source/Core/Mesh/: Mesh.cpp  Mesh.h
Source/Core/Model Loader/: ModelFileLoader.cpp  ModelFileLoader.h  OBJFileLoader.cpp  OBJFileLoader.h
Source/Core/Object/: Object.cpp  Object.h
Source/Core/ObjectTypes/: Cube.h  Plane.h
Source/Core/Post Processor/: PostProcessor.cpp  PostProcessor.h
Source/Core/Renderer/: CubeRenderer.cpp  CubeRenderer.h  Renderer.cpp  Renderer.h
Source/Core/Shaders/: BloomBrightFrag.glsl  BloomBrightVert.glsl  BloomFrag.glsl  BlurFrag.glsl  CubeRendererFrag.glsl  DepthCubemapFrag.glsl  DepthCubemapGeometry.glsl  DepthCubemapVert.glsl  DepthFrag.glsl  DepthVert.glsl  ReflectionFrag.glsl  (+18 more)
Source/Resources/: 12305_backpack_v2_l3.mtl  Credits.txt  imgui.ini
(+24 files in other folders)
